--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ layout: default
         </div>
     </div>
 
+  </br>
 
+  <h1 class="page-heading">Welcome!</h1>
 
-  </br></br>
+  <p>Our lab does yada yada and also this and that. We are part of <a href="https://www.mdc-berlin.de/bimsb">Berlin Institute of Medical System Biology (BIMSB)</a> in <a href="https://www.mdc-berlin.de/en">MDC-Berlin</a></p>
 
-  <h1 class="page-heading">Lab Summary - Welcome/</h1>
-
-  <p>
+</br>
 
   <h1 class="page-heading">News:</h1>
 
@@ -70,8 +70,6 @@ layout: default
     {% endfor %}
   </ul>
   
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
