--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 
   <p>Our lab combines light & electron microscopy, transcription imaging and deep sequencing with computer vision and software development. We develop tools and solutions in order to study and model transcriptional regulation in development using C. elegans and other major model organisms.</p>
   <p>We develop software in the context of ImgLib2, Fiji, and BigDataViewer and provide it open-source to the community.</p>
-  <p>We are part of <a href="https://www.mdc-berlin.de/bimsb">Berlin Institute of Medical System Biology (BIMSB)</a> in <a href="https://www.mdc-berlin.de/en">MDC-Berlin</a></p>
+  <p>Our lab is a part of <a href="https://www.mdc-berlin.de/bimsb">Berlin Institute of Medical System Biology (BIMSB)</a> in <a href="https://www.mdc-berlin.de/en">MDC-Berlin</a>.</p>
 
   </br>
 
