--- a/index.html
+++ b/index.html
@@ -8,43 +8,73 @@ layout: default
 
   <div class="row">
 
-      <div class="col-xs-5 collage-cell collage-cell-big collage-cell-left">
-        <video height="273" loop>
-        <source src="assets/developing_drosophila_embryo.mp4" type="video/mp4" /></video>
+      <div class="col-xs-4 collage-cell collage-cell-big collage-cell-left">
+        <video height="180" loop>
+        <source src="assets/1.mp4" type="video/mp4" /></video>
+      </div>
+
+      <div class="col-xs-3 collage-cell collage-cell-big">
+        <video height="180" loop>
+        <source src="assets/2.mp4" type="video/mp4" /></video>
       </div>
 
       <div class="col-xs-2 collage-cell collage-cell-big">
-        <video height="270" loop>
-        <source src="assets/media5.mp4" type="video/mp4" /></video>
+        <video height="185" loop>
+        <source src="assets/3.mp4" type="video/mp4" /></video>
       </div>
-
-      <div class="col-xs-5 collage-cell collage-cell-big vid_needs_background">
-        <video height="270" loop>
-        <source src="assets/optimazation.mp4" type="video/mp4" /></video>
+      <div class="col-xs-3 collage-cell collage-cell-big">
+        <video height="185" loop>
+        <source src="assets/4.mp4" type="video/mp4" /></video>
       </div>
       
   </div>
 
   <div class="row">
 
-      <div class="col-xs-4 collage-cell collage-cell-small collage-cell-left">
-        <video height="180" loop>
-        <source src="assets/celegans.mp4" type="video/mp4" /></video>
+      <div class="col-xs-2 collage-cell collage-cell-small collage-cell-left vid_needs_white_background">
+        <video height="90" loop>
+        <source src="assets/5.mp4" type="video/mp4" /></video>
       </div>
 
-      <div class="col-xs-3 collage-cell collage-cell-small">
-        <video height="190" loop>
-        <source src="assets/registration_celegans.mp4" type="video/mp4" /></video>
+      <div class="col-xs-6 collage-cell collage-cell-small">
+        <video height="90" loop>
+        <source src="assets/6.mp4" type="video/mp4" /></video>
       </div>
 
-      <div class="col-xs-4 collage-cell collage-cell-small">
-        <video height="178" loop>
-        <source src="assets/alternative_splicing_analysis.mp4" type="video/mp4" /></video>
+      <div class="col-xs-2 collage-cell collage-cell-small vid_needs_black_background">
+        <video height="90" loop>
+        <source src="assets/8.mp4" type="video/mp4" /></video>
+      </div>
+      <div class="col-xs-2 collage-cell collage-cell-small vid_needs_black_background">
+        <video height="90" loop>
+        <source src="assets/7.mp4" type="video/mp4" /></video>
+      </div>
+  </div>
+
+  <div class="row">
+
+      <div class="col-xs-3 collage-cell collage-cell-mid collage-cell-left vid_needs_black_background">
+        <video height="135" loop>
+        <source src="assets/9.mp4" type="video/mp4" /></video>
       </div>
 
-      <div class="col-xs-1 collage-cell collage-cell-small">
-        <video height="180" loop>
-        <source src="assets/media31.mp4" type="video/mp4" /></video>
+      <div class="col-xs-2 collage-cell collage-cell-mid vid_needs_black_background">
+        <video height="135" loop>
+        <source src="assets/10.mp4" type="video/mp4" /></video>
+      </div>
+
+      <div class="col-xs-3 collage-cell collage-cell-mid">
+        <video height="164" loop>
+        <source src="assets/11.mp4" type="video/mp4" /></video>
+      </div>
+
+      <div class="col-xs-3 collage-cell collage-cell-mid">
+        <video height="140" loop>
+        <source src="assets/12.mp4" type="video/mp4" /></video>
+      </div>
+      <div class="col-xs-1 collage-cell collage-cell-mid">
+        <video height="160" loop>
+        <source src="assets/13.mp4" type="video/mp4" /></video>
       </div>
   </div>
 
