minor change video collage title

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ layout: default
         <a class="hover-play" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0038011" target="_blank">
           <video height="164" loop>
           <source src="assets/11.mp4" type="video/mp4" /></video>
+          <div class="video-title">C. elegans EM reconstruction</div>
         </a>
       </div>
 
