--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
       
       <div class="col-xs-7 lab-description-section">
 
-        <h4><b>Welcome!</b></h4>
+        <h4 class="welcome-title"><b>Welcome!</b></h4>
 
         <p>Our lab combines light & electron microscopy, transcription imaging and deep sequencing with computer vision and software development. We develop tools and solutions in order to study and model transcriptional regulation in development using <i>C. elegans</i> and other major model organisms.</p>
         <p>We develop software in the context of ImgLib2, Fiji, and BigDataViewer and provide it open-source to the community.</p>
