--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <div id="intro" class="intro extendfull">
+  <div id="intro" class="intro">
   </br>
     <div class="row">
       <div class="col-xs-5">
@@ -54,7 +54,7 @@ layout: default
       
       <div class="col-xs-7 lab-description-section">
 
-        <h4 class="welcome-title"><b>Welcome!</b></h4>
+        <h1 class="page-heading">Welcome!</h1>
 
         <p>Our lab combines light & electron microscopy, transcription imaging and deep sequencing with computer vision and software development. We develop tools and solutions in order to study and model transcriptional regulation in development using <i>C. elegans</i> and other major model organisms.</p>
         <p>We develop software in the context of ImgLib2, Fiji, and BigDataViewer and provide it open-source to the community.</p>
