--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -6,32 +6,50 @@ permalink: /bimsb_seminar/
 
 <div class="bimsb-seminar">
 	<br/>
-	<h3><span style="color:blue">BIMSB Seminar Series</span></h3>
+	<h3><span style="color:#00428d">BIMSB Seminar Series 2017</span></h3>
 	<br/>
 
-	<!--
-	<div id="bimsb_seminar" markdown="1">
-		<span style="color:blue">
-	-->
+	<ul class="nav nav-tabs bimsb-tab">
+		<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events 2017</a></li>
+		<li><a data-toggle="tab" href="#bimsb-past-2017">Past Events 2017</a></li>
+		<li><a data-toggle="tab" href="#bimsb-past-2016">Past Events 2016</a></li>
+	</ul>
 
-	<div class="row">
-	 	<div class="col-md-2">February 1</div> 
-	 	<div class="col-md-7"><p><a href="http://compgenomics.weizmann.ac.il/tanay/" target="_blank"><b>Amos Tanay</b></a>,&nbsp; Weizmann Institute</p>
-	 	<p>Defining and studying cellular memory.</p>
-	 	<p>Transcriptional and epigenetic control in embryonic and stem cell differentiation.</p></div>
-	 	<div class="col-md-3"><p>Axon 1</p><p>Host: Philipp Junker</p></div>
+	<br/>
+
+	<div class="tab-content">
+
+  		<div id="bimsb-future" class="tab-pane fade in active">
+			<div class="row">
+				<div class="col-md-1"><p>Feb 14<br/><small>14:00</small></p></div> 
+			 	<div class="col-md-5">
+			 		<p><a href="https://www.hubrecht.eu/research/van-oudenaarden-quantitative-biology-of-development-stem-cells/" target="_blank"><b>Alexander van Oudenaarden</b></a>, Hubrecht Institute<br/><small>Location: Axon 2, Host: Philipp Junker</small></p>
+			 	</div>
+			 	<div class="col-md-6">
+			 		<p>Revealing novel cell types, cell-cell interactions, and cell lineages by single cell sequencing.</p>
+			 	</div>
+			 	<!--<div class="col-md-3"><p>Host: Philipp Junker</p></div>-->
+			</div>
+			<hr/><br/>
+		</div>
+
+
+		<div id="bimsb-past-2017" class="tab-pane fade">
+			<p>past 2017</p>
+		</div>
+
+
+		<div id="bimsb-past-2016" class="tab-pane fade">
+			<p>past 2016</p>
+		</div>
+
 	</div>
-	<hr/> <!--line separator-->
-	<br/>
-	<div class="row">
-		<div class="col-md-2"><p>February 14<br/><small>Axon 1</small></p></div> 
-	 	<div class="col-md-4">
-	 		<p><a href="https://www.hubrecht.eu/research/van-oudenaarden-quantitative-biology-of-development-stem-cells/" target="_blank"><b>Alexander van Oudenaarden</b></a><br/>Hubrecht Institute</p>
-	 	</div>
-	 	<div class="col-md-6">
-	 		<p>Revealing novel cell types, cell-cell interactions, and cell lineages by single cell sequencing.</p>
-	 	</div>
-	 	<!--<div class="col-md-3"><p>Host: Philipp Junker</p></div>-->
-	<div>
+
+	<a href="/bimsb_seminar_doc_link/" target="_blank"><b>Click here to schedule a new BIMSB seminar talk</a></b>
+
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+<script type="text/javascript" src="/javascripts/bootstrap.js"></script>
+
 
