--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -45,7 +45,8 @@ permalink: /bimsb_seminar/
 
 	</div>
 
-	<a href="/bimsb_seminar_doc_link/" target="_blank"><b>Click here to schedule a new BIMSB seminar talk</a></b>
+
+	<a href="{{ site.baseurl }}/bimsb_seminar_doc_link/"><b>Click here to schedule a new BIMSB seminar talk</a></b>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
