bimsb seminar edit link

--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -46,7 +46,7 @@ permalink: /bimsb_seminar/
 	</div>
 
 
-	<a href="{{ site.baseurl }}/extras/bimsb_seminar_doc.html/" target="_blank"><b>Click here to schedule a new BIMSB seminar talk</a></b>
+	<a href="{{ site.baseurl }}/extras/bimsb_seminar_doc.html" target="_blank"><b>Click here to schedule a new BIMSB seminar talk</a></b>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
