--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -20,27 +20,375 @@ permalink: /bimsb_seminar/
 	<div class="tab-content">
 
   		<div id="bimsb-future" class="tab-pane fade in active">
+
+			<div class="row">
+			<div class="col-md-1"><p>May 2<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.sys-bio.net/people:nils_bluethgen" target="_blank"><b>Nils Blüthgen</b></a>, Charité<br/><small>Host: Nikolaus Rajewsky</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Using perturbation data to reconstruct signalling networks in cancer.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>May 8<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.stowers.org/faculty/zeitlinger-lab" target="_blank"><b>Julia Zeitlinger</b></a>, Stowers Institute for Medical Research<br/><small>Location: Axon 1, Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Peaking into transcription using high-resolution genomics techniques</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>May 9<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.molgen.mpg.de/3671240/cv-andreas-mayer" target="_blank"><b>Andreas Mayer</b></a>, Max Planck Institute for Molecular Genetics<br/><small>Host: Uwe Ohler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Visualizing chromatin-mediated genome transcription at nucleotide resolution</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>May 23<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.theosysbio.bio.ic.ac.uk/people/michael-stumpf/" target="_blank"><b>Michael Stumpf</b></a>, Imperial College London<br/><small>Location: Hist. Hörsaal, Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p></p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>May 30<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.buchholzlab.org/" target="_blank"><b>Frank Buchholz</b></a>, TU Dresden<br/><small>Location: Hist. Hörsaal, Host: Uwe Ohler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p></p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>jun 22<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://yeolab.github.io/gene-yeo/" target="_blank"><b>Gene Yeo</b></a>, UCSD<br/><small>Location: Axon 1, Host: Uwe Ohler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p></p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>jul 4<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.nki.nl/divisions/biochemistry/brummelkamp-t-group/" target="_blank"><b>Thijn Brummelkamp</b></a>, The Netherlands Cancer Institute <br/><small>Host: Nikolaus Rajewsky</small></p>
+			</div>
+			<div class="col-md-6">
+			<p></p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>jul 18<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.imba.oeaw.ac.at/research/stefan-ameres/" target="_blank"><b>Stefan Ameres </b></a>, IMBA<br/><small>Location: Dendriten 2+3, Host: Markus Landthaler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p></p>
+			</div>
+			</div>
+			<hr/><br/>
+
+
+		</div>
+
+
+		<div id="bimsb-past-2017" class="tab-pane fade">
+
+			<div class="row">
+				<div class="col-md-1"><p>Feb 1<br/><small>14:00</small></p></div>
+				<div class="col-md-5">
+					<p><a href="http://compgenomics.weizmann.ac.il/tanay/" target="_blank"><b>Amos Tanay</b></a>, Weizmann Institute<br/><small>Location: Axon 1, Host: Philipp Junker</small></p>
+				</div>
+				<div class="col-md-6">
+					<p>Transcriptional and epigenetic control in embryonic and stem cell differentiation</p>
+				</div>
+			</div>
+			<hr/><br/>
+
 			<div class="row">
 				<div class="col-md-1"><p>Feb 14<br/><small>14:00</small></p></div> 
 			 	<div class="col-md-5">
 			 		<p><a href="https://www.hubrecht.eu/research/van-oudenaarden-quantitative-biology-of-development-stem-cells/" target="_blank"><b>Alexander van Oudenaarden</b></a>, Hubrecht Institute<br/><small>Location: Axon 2, Host: Philipp Junker</small></p>
 			 	</div>
 			 	<div class="col-md-6">
-			 		<p>Revealing novel cell types, cell-cell interactions, and cell lineages by single cell sequencing.</p>
+			 		<p>
+			 			Revealing novel cell types, cell-cell interactions, and cell lineages by single cell sequencing.
+			 		</p>
 			 	</div>
-			 	<!--<div class="col-md-3"><p>Host: Philipp Junker</p></div>-->
 			</div>
 			<hr/><br/>
-		</div>
 
+			<div class="row">
+			<div class="col-md-1"><p>Feb 28<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.uni-goettingen.de/en/57988.html" target="_blank"><b>Steven A. Johnsen</b></a>, University Medical Center Göttingen<br/><small>Location: Axon 2, Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Epigenetic Regulation of Cell Fate Specification</p>
+			</div>
+			</div>
+			<hr/><br/>
 
-		<div id="bimsb-past-2017" class="tab-pane fade">
-			<p>past 2017</p>
+			<div class="row">
+			<div class="col-md-1"><p>﻿Mar 7<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.unil.ch/dgm/en/home/menuinst/research-groups/ana-marques.html" target="_blank"><b>Ana Marques</b></a>, University of Lausanne<br/><small>Location: Axon 1, Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Complex trait-relevant lincRNAs can regulate gene expression by modulating local chromosomal architecture</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Mar 14<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.crbm.cnrs.fr/index.php/en/patrick-lemaire-uk" target="_blank"><b>Patrick Lemaire</b></a>, Centre for Macromolecular Biochemistry Research Montpellier<br/><small>Location: Axon 2, Host: Stephan Preibisch</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Embryonic inductions may constrain the evolution of ascidian embryonic morphogenesis</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Mar 28<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.garfieldlab.org/" target="_blank"><b>David Garfield</b></a>, IRI Berlin<br/><small>Location: Axon 2, Host: Nikolaus Rajewsky</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Characterising embryonic regulatory landscapes using lineage-specific DNase-Seq and single-cell ATAC-Seq</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Mar 31<br/><small>11:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.une.edu/people/donald-edward-olins" target="_blank"><b>Donald and Ada Olins</b></a>, University of New England<br/><small>Location: Axon 2, Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Epichromatin: Nucleosomes at the Surface</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Apr 4<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.acgt.co.za/profiles/dr-musa-mhlanga" target="_blank"><b>Musa Mhlanga</b></a>, University of Cape Town<br/><small>Location: Axon 2, Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Lncing Genome architecture to innate immunity</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Apr 11<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.dzne.de/en/sites/goettingen/forschergruppen/bonn.html" target="_blank"><b>Stefan Bonn</b></a>, DZNE Göttingen<br/><small>Location: Axon 2, Host: Robert Zinzen</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Can we predict biological processes and human disease?</p>
+			</div>
+			</div>
+			<hr/><br/>
+			
+
 		</div>
 
 
 		<div id="bimsb-past-2016" class="tab-pane fade">
-			<p>past 2016</p>
+			
+
+
+			<div class="row">
+			<div class="col-md-1"><p>﻿Feb 2<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.ie-freiburg.mpg.de/4558503/Gruen" target="_blank"><b>Dominic Grün</b></a>, Max Planck Institute of Immunobiology and Epigenetics<br/><small>Host: Nikolaus Rajewsky</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>De novo prediction of stem cell identity using single-cell transcriptome data.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Feb 23<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://science.institut-curie.org/research/biology-cancer-genetics-and-epigenetics/developmental-biology-and-genetics/team-shkumatava/" target="_blank"><b>Alena Shkumatava</b></a>, Institute Curie<br/><small>Host: Marina Chekulaeva</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Dissecting vertebrate lncRNA functions and mechanism of action.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Mar 22<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.uni-ulm.de/nawi/nawi-biophys/ueber-uns/mitarbeiter/homepages/christofgebhardt/" target="_blank"><b>Christof Gebhardt</b></a>, University of Ulm<br/><small>Host: Philipp Junker</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Single molecule imaging of genome activation in live zebrafish embryos.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Apr 12<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://scholar.google.de/citations?user=leJ-_y4AAAAJ&hl=de" target="_blank"><b>Tilmann Buerckstuemmer</b></a>, Horizon Discovery Wien<br/><small>Host: Markus Landthaler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>The CRISPR/Cas revolution: Genome engineering of human cells.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Apr 19<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.evolutionary-ecology.bio.lmu.de/evolution_development/people/professor/gompel/index.html" target="_blank"><b>Nicolas Gompel</b></a>, LMU Munich<br/><small>Host: Stephan Preibisch</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Regulatory evolution and the diversification of pigmentation patterns in Drosophila.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>May 10<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.gofflab.org/" target="_blank"><b>Loyal Goff</b></a>, Johns Hopkins University School of Medicine<br/><small>Host: Robert Zinzen</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Exploring cellular heterogeneity in the mammalian brain: lncRNAs and single cell analysis.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>May 17<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.weizmann.ac.il/molgen/Gerst/" target="_blank"><b>Jeff Gerst</b></a>, Weizmann Institute<br/><small>Host: Markus Landthaler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Intracellular and Intercellular RNA trafficking.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Jun 14<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.kcl.ac.uk/ioppn/depts/devneuro/Research/groups/makeyev.aspx" target="_blank"><b>Eugene Makeyev</b></a>, King's College London<br/><small>Host: Marina Chekulaeva</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>On importance of mixed (RNA) messages in developing brain.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Jun 21<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.rinnlab.com/" target="_blank"><b>John Rinn</b></a>, Harvard & Broad Institute Cambridge<br/><small>Host: Robert Zinzen</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Three and Four Dimensional Nuclear Organization by lncRNAs.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Sep 1<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://hobertlab.org/" target="_blank"><b>Oliver Hobert</b></a>, Columbia University<br/><small>Host: Baris Tursun</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>A regulatory map of the C. elegans nervous system.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Oct 4<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.physiolchemie.abi.med.uni-muenchen.de/research/ladurner/index.html" target="_blank"><b>Andreas Ladurner</b></a>, LMU Munich<br/><small>Host: Robert Zinzen</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Metabolites regulate signalling to chromatin and drive epigenetic plasticity.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Oct 25<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://zmmk-sbc.uni-koeln.de/CMMC___JRG_VIII__Systems_Biology_of_Chromatin/People.html" target="_blank"><b>Argyris Papantonis</b></a>, Center for Molecular Medicine, University of Cologne<br/><small>Host: Nikolaus Rajewsky</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Isolation of transcription factories as a means for studying transcriptional organization of the human genome in space and time.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Dec 6<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.babraham.ac.uk/our-research/epigenetics/wolf-reik" target="_blank"><b>Wolf Reik</b></a>, Babraham Institute<br/><small>Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Epigenetic reprogramming in mammalian development.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Dec 7<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="https://www.age.mpg.de/science/research-labs/wickstroem/" target="_blank"><b>Sara Wickström</b></a>, MPI Köln<br/><small>Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Mechanism and mechanics of stem cell fate regulation.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Dec 13<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://www.miguelaliagalab.com/" target="_blank"><b>Irene Miguel-Aliaga</b></a>, Imperial London College<br/><small>Host: Nikolaus Rajewsky</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>Sex differences in adult organ size and plasticity.</p>
+			</div>
+			</div>
+			<hr/><br/>
+
 		</div>
 
 	</div>
