--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -399,6 +399,6 @@ permalink: /bimsb_seminar/
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
-<script type="text/javascript" src="/javascripts/bootstrap.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/javascripts/bootstrap.js"></script>
 
 
