--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -80,7 +80,7 @@ permalink: /bimsb_seminar/
 			<p><a href="http://www.theosysbio.bio.ic.ac.uk/people/michael-stumpf/" target="_blank"><b>Michael Stumpf</b></a>, Imperial College London<br/><small>Location: Hist. Hörsaal, Host: Ana Pombo</small></p>
 			</div>
 			<div class="col-md-6">
-			<p></p>
+			<p>The dynamics of gene regulation networks during stem cell differentiation</p>
 			</div>
 			</div>
 			<hr/><br/>
