bimsb event add

--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -12,8 +12,8 @@ permalink: /bimsb_seminar/
 	-->
 
 	<ul class="nav nav-tabs bimsb-tab">
-		<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events 2017</a></li>
-		<li><a data-toggle="tab" href="#bimsb-past-2017">Past Events 2017</a></li>
+		<!--<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events 2017</a></li> -->
+		<li class="active"><a data-toggle="tab" href="#bimsb-past-2017">Past Events 2017</a></li>
 		<li><a data-toggle="tab" href="#bimsb-past-2016">Past Events 2016</a></li>
 	</ul>
 
@@ -21,7 +21,14 @@ permalink: /bimsb_seminar/
 
 	<div class="tab-content">
 
-  		<div id="bimsb-future" class="tab-pane fade in active">
+  		<!--- <div id="bimsb-future" class="tab-pane fade in active">
+
+
+		</div>  
+	-->
+
+
+		<div id="bimsb-past-2017" class="tab-pane fade in active">
 
 			<div class="row">
 			<div class="col-md-1"><p>Jul 4<br/><small>14:00</small></p></div>
@@ -44,12 +51,6 @@ permalink: /bimsb_seminar/
 			</div>
 			</div>
 			<hr/><br/>
-
-
-		</div>
-
-
-		<div id="bimsb-past-2017" class="tab-pane fade">
 
 			<div class="row">
 			<div class="col-md-1"><p>Jun 22<br/><small>14:00</small></p></div>
