--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -36,7 +36,9 @@ permalink: /bimsb_seminar/
 			<p><a href="https://www.nki.nl/divisions/biochemistry/brummelkamp-t-group/" target="_blank"><b>Thijn Brummelkamp</b></a>, The Netherlands Cancer Institute <br/><small>Host: Nikolaus Rajewsky</small></p>
 			</div>
 			<div class="col-md-6">
-			<p></p>
+			<p>
+			
+			</p>
 			</div>
 			</div>
 			<hr/><br/>
@@ -47,7 +49,9 @@ permalink: /bimsb_seminar/
 			<p><a href="http://www.imba.oeaw.ac.at/research/stefan-ameres/" target="_blank"><b>Stefan Ameres</b></a>, IMBA<br/><small>Location: Dendriten 2+3, Host: Markus Landthaler</small></p>
 			</div>
 			<div class="col-md-6">
-			<p></p>
+			<p>
+			Mechanism and Biology of RNA Silencing
+			</p>
 			</div>
 			</div>
 			<hr/><br/>
@@ -58,7 +62,9 @@ permalink: /bimsb_seminar/
 			<p><a href="http://yeolab.github.io/gene-yeo/" target="_blank"><b>Gene Yeo</b></a>, UCSD<br/><small>Location: Axon 1, Host: Uwe Ohler</small></p>
 			</div>
 			<div class="col-md-6">
-			<p></p>
+			<p>
+			Insights into development and disease from large-scale studies of protein-RNA interactions
+			</p>
 			</div>
 			</div>
 			<hr/><br/>
@@ -69,7 +75,9 @@ permalink: /bimsb_seminar/
 			<p><a href="http://www.buchholzlab.org/" target="_blank"><b>Frank Buchholz</b></a>, TU Dresden<br/><small>Location: Hist. Hörsaal, Host: Uwe Ohler</small></p>
 			</div>
 			<div class="col-md-6">
-			<p></p>
+			<p>
+			Development of genomic medicine tools to decipher disease mechanisms
+			</p>
 			</div>
 			</div>
 			<hr/><br/>
