--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -12,7 +12,7 @@ permalink: /bimsb_seminar/
 	-->
 
 	<ul class="nav nav-tabs bimsb-tab">
-		<!--<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events 2017</a></li> -->
+		<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events 2017</a></li>
 		<li class="active"><a data-toggle="tab" href="#bimsb-past-2017">Past Events 2017</a></li>
 		<li><a data-toggle="tab" href="#bimsb-past-2016">Past Events 2016</a></li>
 	</ul>
@@ -21,27 +21,52 @@ permalink: /bimsb_seminar/
 
 	<div class="tab-content">
 
-  		<!--- <div id="bimsb-future" class="tab-pane fade in active">
-
-
-		</div>  
-	-->
-
-
-		<div id="bimsb-past-2017" class="tab-pane fade in active">
+  		<div id="bimsb-future" class="tab-pane fade in active">
 
 			<div class="row">
-			<div class="col-md-1"><p>Jul 4<br/><small>14:00</small></p></div>
+			<div class="col-md-1"><p>Apr 17<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
-			<p><a href="https://www.nki.nl/divisions/biochemistry/brummelkamp-t-group/" target="_blank"><b>Thijn Brummelkamp</b></a>, The Netherlands Cancer Institute <br/><small>Host: Nikolaus Rajewsky</small></p>
+			<p><a href="http://plathlab.com/" target="_blank"><b>Kathrin Plath</b></a>, UCLA <br/><small>Host: Baris Tursun</small></p>
 			</div>
 			<div class="col-md-6">
 			<p>
-			
+			TBA
 			</p>
 			</div>
 			</div>
 			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Feb 12<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://marciuslab.org/" target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona <br/><small>Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>
+			TBA
+			</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Oct 17<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://mbg.au.dk/en/research/research-areas/gene-expression-gene-medicine/torben-heick-jensen/" target="_blank"><b>Torben Heick Jensen</b></a>, Aarhus University <br/><small>Host: Markus Landthaler</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>
+			TBA
+			</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+		</div>  
+
+
+
+		<div id="bimsb-past-2017" class="tab-pane fade in active">
 
 			<div class="row">
 			<div class="col-md-1"><p>Jul 18<br/><small>14:00</small></p></div>
