--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -12,8 +12,8 @@ permalink: /bimsb_seminar/
 	-->
 
 	<ul class="nav nav-tabs bimsb-tab">
-		<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events 2017</a></li>
-		<li class="active"><a data-toggle="tab" href="#bimsb-past-2017">Past Events 2017</a></li>
+		<li class="active"><a data-toggle="tab" href="#bimsb-future">Future Events</a></li>
+		<li><a data-toggle="tab" href="#bimsb-past-2017">Past Events 2017</a></li>
 		<li><a data-toggle="tab" href="#bimsb-past-2016">Past Events 2016</a></li>
 	</ul>
 
@@ -40,6 +40,19 @@ permalink: /bimsb_seminar/
 			<div class="col-md-1"><p>Feb 12<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
 			<p><a href="http://marciuslab.org/" target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona <br/><small>Host: Ana Pombo</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>
+			TBA
+			</p>
+			</div>
+			</div>
+			<hr/><br/>
+
+			<div class="row">
+			<div class="col-md-1"><p>Oct 24<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://sabatinilab.wi.mit.edu/" target="_blank"><b>Greg Sienski (Sabatini Lab)</b></a>, Whitehead Institute <br/><small>Host: Markus Landthaler</small></p>
 			</div>
 			<div class="col-md-6">
 			<p>
