--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -75,6 +75,19 @@ permalink: /bimsb_seminar/
 			</div>
 			<hr/><br/>
 
+			<div class="row">
+			<div class="col-md-1"><p>Oct 10<br/><small>14:00</small></p></div>
+			<div class="col-md-5">
+			<p><a href="http://genes.mit.edu/burgelab/index.html" target="_blank"><b>Jennifer Cherone (Chris Burge lab)</b></a>, MIT <br/><small>Host: TBA</small></p>
+			</div>
+			<div class="col-md-6">
+			<p>
+			TBA
+			</p>
+			</div>
+			</div>
+			<hr/><br/>
+
 		</div>  
 
 
