--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -24,9 +24,9 @@ permalink: /bimsb_seminar/
   		<div id="bimsb-future" class="tab-pane fade in active">
 
 			<div class="row">
-			<div class="col-md-1"><p>Apr 17<br/><small>14:00</small></p></div>
+			<div class="col-md-1"><p>Oct 10<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
-			<p><a href="http://plathlab.com/" target="_blank"><b>Kathrin Plath</b></a>, UCLA <br/><small>Host: Baris Tursun</small></p>
+			<p><a href="http://genes.mit.edu/burgelab/index.html" target="_blank"><b>Jennifer Cherone (Chris Burge lab)</b></a>, MIT <br/><small>Host: Markus Landthaler</small></p>
 			</div>
 			<div class="col-md-6">
 			<p>
@@ -36,10 +36,10 @@ permalink: /bimsb_seminar/
 			</div>
 			<hr/><br/>
 
-			<div class="row">
-			<div class="col-md-1"><p>Feb 12<br/><small>14:00</small></p></div>
+ 			<div class="row">
+			<div class="col-md-1"><p>Oct 17<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
-			<p><a href="http://marciuslab.org/" target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona <br/><small>Host: Ana Pombo</small></p>
+			<p><a href="http://mbg.au.dk/en/research/research-areas/gene-expression-gene-medicine/torben-heick-jensen/" target="_blank"><b>Torben Heick Jensen</b></a>, Aarhus University <br/><small>Host: Markus Landthaler</small></p>
 			</div>
 			<div class="col-md-6">
 			<p>
@@ -49,7 +49,7 @@ permalink: /bimsb_seminar/
 			</div>
 			<hr/><br/>
 
-			<div class="row">
+  			<div class="row">
 			<div class="col-md-1"><p>Oct 24<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
 			<p><a href="http://sabatinilab.wi.mit.edu/" target="_blank"><b>Greg Sienski (Sabatini Lab)</b></a>, Whitehead Institute <br/><small>Host: Markus Landthaler</small></p>
@@ -63,9 +63,9 @@ permalink: /bimsb_seminar/
 			<hr/><br/>
 
 			<div class="row">
-			<div class="col-md-1"><p>Oct 17<br/><small>14:00</small></p></div>
+			<div class="col-md-1"><p>Feb 12, 2018<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
-			<p><a href="http://mbg.au.dk/en/research/research-areas/gene-expression-gene-medicine/torben-heick-jensen/" target="_blank"><b>Torben Heick Jensen</b></a>, Aarhus University <br/><small>Host: Markus Landthaler</small></p>
+			<p><a href="http://marciuslab.org/" target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona <br/><small>Host: Ana Pombo</small></p>
 			</div>
 			<div class="col-md-6">
 			<p>
@@ -76,9 +76,9 @@ permalink: /bimsb_seminar/
 			<hr/><br/>
 
 			<div class="row">
-			<div class="col-md-1"><p>Oct 10<br/><small>14:00</small></p></div>
+			<div class="col-md-1"><p>Apr 17, 2018<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
-			<p><a href="http://genes.mit.edu/burgelab/index.html" target="_blank"><b>Jennifer Cherone (Chris Burge lab)</b></a>, MIT <br/><small>Host: Markus Landthaler</small></p>
+			<p><a href="http://plathlab.com/" target="_blank"><b>Kathrin Plath</b></a>, UCLA <br/><small>Host: Baris Tursun</small></p>
 			</div>
 			<div class="col-md-6">
 			<p>
@@ -88,9 +88,7 @@ permalink: /bimsb_seminar/
 			</div>
 			<hr/><br/>
 
-		</div>  
-
-
+		</div>
 
 		<div id="bimsb-past-2017" class="tab-pane fade in active">
 
