added events bimsb

--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -90,7 +90,7 @@ permalink: /bimsb_seminar/
 
 		</div>
 
-		<div id="bimsb-past-2017" class="tab-pane fade in active">
+		<div id="bimsb-past-2017" class="tab-pane fade">
 
 			<div class="row">
 			<div class="col-md-1"><p>Jul 18<br/><small>14:00</small></p></div>
