--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -63,7 +63,7 @@ permalink: /bimsb_seminar/
 			<hr/><br/>
 
 			<div class="row">
-			<div class="col-md-1"><p>Feb 12, 2018<br/><small>14:00</small></p></div>
+			<div class="col-md-1"><p>Feb 12 2018<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
 			<p><a href="http://marciuslab.org/" target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona <br/><small>Host: Ana Pombo</small></p>
 			</div>
@@ -76,7 +76,7 @@ permalink: /bimsb_seminar/
 			<hr/><br/>
 
 			<div class="row">
-			<div class="col-md-1"><p>Apr 17, 2018<br/><small>14:00</small></p></div>
+			<div class="col-md-1"><p>Apr 17 2018<br/><small>14:00</small></p></div>
 			<div class="col-md-5">
 			<p><a href="http://plathlab.com/" target="_blank"><b>Kathrin Plath</b></a>, UCLA <br/><small>Host: Baris Tursun</small></p>
 			</div>
