--- a/dauer/dauerRender/index.html
+++ b/dauer/dauerRender/index.html
@@ -23,9 +23,9 @@
     TOTAL_MEMORY: 268435456,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Release/dauerRender1.data",
-    codeUrl: "Release/dauerRender1.js",
-    memUrl: "Release/dauerRender1.mem",
+    dataUrl: "Release/dauerRender1.datagz",
+    codeUrl: "Release/dauerRender1.jsgz",
+    memUrl: "Release/dauerRender1.memgz",
     
   };
 </script>
