--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -1,6 +1,6 @@
 ---
 layout: extra
-title: BIMSB Seminar!
+title: BIMSB Seminar
 permalink: /bimsb_seminar/
 published: true
 ---
@@ -50,6 +50,17 @@ published: true
 <div class="col-md-1"><p>17 Apr 2018<br/><small>14:00</small></p></div>
 <div class="col-md-5">
 <p><a href=http://plathlab.com/ target="_blank"><b>Kathrin Plath</b></a>, UCLA<br/><small>Host: Baris Tursun, Location: Axon II</small></p>
+</div>
+<div class="col-md-6">
+<p>TBA</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>15 May 2018<br/><small></small></p></div>
+<div class="col-md-5">
+<p><a href= target="_blank"><b>Eric Lécuyer</b></a>, Institute de Recherches Cliniques de Montréal (IRCM)<br/><small>Host: Markus Landthaler, Location: </small></p>
 </div>
 <div class="col-md-6">
 <p>TBA</p>
