lightsheet conference edits

--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -72,7 +72,7 @@ published: true
       <header class="masthead">
         <div class="container">
           <div class="intro-text">
-            <div class="intro-heading text-uppercase">Light sheet fluorescence microscopy</div>
+            <div class="intro-heading text-uppercase">10th Anniversary Light Sheet Fluorescence Microscopy Conference</div>
             <div>12 - 15 August, 2018 | Dresden, Germany</div>
           </div>
         </div>
@@ -83,8 +83,10 @@ published: true
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
-              <h2 class="section-heading text-uppercase">About the Workshop</h2>
-              <p class="text-muted text-left">Technology drives discovery in life sciences and in particular microscopy had a strong impact on progress in understanding biological systems across scales. Light sheet microscopy has emerged in the last 15 years as a powerful tool to interrogate biological systems. Its unique properties enable unprecedented imaging speeds that due to reduced phototoxicity enable monitoring of living systems for long periods of time. Large, fixed or cleared biological samples, such as organs or embryos, can be imaged with high resolution in a fraction of time compared to other light microscopy approaches. The spatial coverage and temporal resolution, when combined, leads to in toto imaging of entire biological systems. Light sheets open entirely new windows into the inner workings of cells and organisms and has re-invigorated several research fields including developmental and cell biology, physiology, neurobiology and biodiversity research. In this workshop, which is a 10th Anniversary instalment of the Light Sheet Fluorescence Microscopy (LSFM) workshop/conference that started in 2009 in Dresden, we plan to bring together the technology developers and users of light sheets. It will be an opportunity to showcase the latest light sheet set-ups and discuss how to best deploy them for the benefit of the biological research community.</p>
+              <h2 class="section-heading text-uppercase">About the Conference</h2>
+              <p class="text-muted text-left">Light sheet microscopy has emerged in the last 15 years as a powerful tool to interrogate living biological systems with unprecedented imaging speeds for as long as it takes. Large, fixed, cleared or expanded biological samples can be imaged with high resolution in a fraction of time compared to conventional microscopy approaches. When combined, the spatial coverage and temporal resolution leads to in toto recording of complex biological phenomena.</p>
+              <p class="text-muted text-left">Light sheets opened entirely new windows into the inner workings of cells and organisms and re-invigorated several research fields including developmental and cell biology, physiology, neurobiology and biodiversity research. This conference marks the <b>10th Anniversary of Light Sheet Fluorescence Microscopy</b> (LSFM) meetings that <b>started in 2009 in Dresden</b>. It will bring together the technology developers and users of light sheets, showcase the latest light sheet set-ups and how to best deploy them for the benefit of the biological research community.</p>
+              <p class="text-muted text-left">A unique feature of the conference is that it immediately follows the <a href="http://meetings.embo.org/event/18-lsm" target="_blank">3rd EMBO practical course on light sheet microscopy</a> held in Dresden between August 2 nd and 12 th 2018. This course teaches light sheet microscopy to the next generation of scientists who will present the results of their light sheet experiments at the conference. Additionally, a <b>full range of commercial light sheet microscopy hardware</b> used at the course will be demonstrated at the conference.</p>
               <br/>
             </div>
           </div>
@@ -114,9 +116,9 @@ published: true
               <ul class="list-inline social-buttons"><li>
                 <div class="row">
                   <div class="col-md-2">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/search?q=%23LSFM18&src=typd" target="_blank"><i class="fa fa-twitter"></i></a>
                   </div>
-                  <div class="col-md-8 text-left">Tweet #</div>
+                  <div class="col-md-8 text-left">Tweet #LSFM18</div>
               </li></ul>
               <ul class="list-inline social-buttons"><li>
                 <div class="row">
@@ -605,8 +607,8 @@ published: true
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <span class="copyright">Copyright &copy; 2013-2018 Blackrock Digital LLC (Twitter Bootstrap Template)</span>
-              <span class="copyright"><a href="https://github.com/bellonet" target="_blank">@bellonet</a></span>
+              <span class="copyright">Copyright &copy; 2013-2018 Blackrock Digital LLC</span>
+              <p><span class="copyright"><a href="https://github.com/bellonet" target="_blank">@bellonet</a></span></p>
             </div>
             <div class="col-md-6">
               <ul class="list-inline social-buttons">
