--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -473,18 +473,27 @@ published: true
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-3">
               <h5 class="text-muted">Christina Kuss</h5>
-              <h6><a href="mailto:lsconference@mpi-cbg.de" target="_blank">lsconference@mpi-cbg.de</a></h6>
-              <br/>
             </div>
-            <div class="col-lg-4 text-center">
-              <h5 class="text-muted">Sandy Schneider</h5>
-              <h6><a href="mailto:schneide@mpi-cbg.de" target="_blank">schneide@mpi-cbg.de</a></h6>
-              <p class="text-muted">Phone: +49 351 210-2756</p>
-              <br/>
+            <div class="col-lg-3">
+              <h5 class="text-muted">+49-351-210-2805</h5>
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-3">
+              <h5 class="text-muted">Sandy Schneider</h5>
+            </div>
+            <div class="col-lg-3">
+              <h5 class="text-muted">+49-351-210-2756</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <h5><a href="mailto:lsconference@mpi-cbg.de" target="_blank">lsconference@mpi-cbg.de</a></h5>
+            </div>
+          </div>
+          <br/>
           <div class="row">
             <div class="col-sm-12"><h3 class="about-heading text-uppercase">Organizers</h3></div>
             <br/><br/><br/>
