--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -287,7 +287,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/James Swoger.jpg" alt="">
                 <h4><a href="https://www.researchgate.net/profile/Jim_Swoger" target="_blank">James Swoger</a></h4>
-                <p class="text-muted">CRG Barcelona, SP</p>
+                <p class="text-muted">EMBL Barcelona, SP</p>
               </div>
             </div>
             <div class="col-sm-4">
