--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -96,7 +96,7 @@ published: true
               <p class="text-muted">July 1st, 2018</p>
               <h4 class="about-heading">Abstract Submission Deadline</h4>
               <p class="text-muted">July 1st, 2018</p>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#registration">Apply Now!</a>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://indico.mpi-cbg.de/e/LSFM" target="_blank">Apply Now!</a>
               <!--
               <h4 class="about-heading">Chosen Participants Will Be Notified By</h4>
               <p class="text-muted">15 April 2018</p>
@@ -442,7 +442,7 @@ published: true
                     <h4 class="about-heading text-uppercase">Industry</h4>
                     <p class="text-muted text-uppercase">600 EUR</p>
                   </div class="prices">
-                  <a class="btn btn-primary btn-xl btn-block text-uppercase js-scroll-trigger" href="#registration">Application Opens Soon</a>
+                  <a class="btn btn-primary btn-xl btn-block text-uppercase js-scroll-trigger" href="https://indico.mpi-cbg.de/e/LSFM" target="_blank">Apply now!</a>
                 </div>
 
                 <div class="col-md-6">
