--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -635,11 +635,15 @@ published: true
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
+              <span class="copyright"><a href="{{ site.baseurl }}/external/imprint/">Imprint / Impressum</a></span>
+              <p><span class="copyright"><a href="{{ site.baseurl }}/external/data_privacy/">Data Privacy</a></span><p>
+            </div>
+            <div class="col-md-4">
               <span class="copyright">Copyright &copy; 2013-2018 Blackrock Digital LLC</span>
               <p><span class="copyright"><a href="https://github.com/bellonet" target="_blank">@bellonet</a></span></p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/search?q=%23LSFM18&src=typd" target="_blank">
