--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -252,7 +252,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Nadine Peyrieras.jpg" alt="">
                 <h4><a href="http://neuro-psi.cnrs.fr/spip.php?article378&lang=fr" target="_blank">Nadine Peyrieras</a></h4>
-                <p class="text-muted">Paris-Saclay Institute of Neuroscience, FR</p>
+                <p class="text-muted">CNRS Laboratory USR3695 BioEmergences, FR</p>
               </div>
             </div>
             <div class="col-sm-4">
