twitter for contact

--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -503,6 +503,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Pavel Tomancak.jpg" alt="">
                 <h4><a href="https://www.mpi-cbg.de/research-groups/current-groups/pavel-tomancak/research-focus/" target="_blank">Pavel Tomancak</a></h4>
+                <p class="text-muted" style="margin:0;"><a href="https://twitter.com/PavelTomancak" target="_blank">@PavelTomancak</a></p>
                 <p class="text-muted">Max Planck Institute of Molecular Cell Biology & Genetics, Dresden, DE</p>
               </div>
             </div>
@@ -510,14 +511,17 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="http://i.imgur.com/J4zjb7R.png" alt="">
                 <h4><a href="http://preibischlab.mdc-berlin.de/" target="_blank">Stephan Preibisch</a></h4>
+                <p class="text-muted" style="margin:0;"><a href="https://twitter.com/preibischs" target="_blank">@preibischs</a></p>
                 <p class="text-muted">Max-Delbrück-Centrum für Molekulare Medizin (MDC), Berlin, DE</p>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Emmanuel Reynaud.jpg" alt="">
-                <h4><a href="http://www.ucd.ie/biomedicalengineering/people/medicalscienceprincipalinvestigators/reynauddremmanuel/" target="_blank">Emmanuel Reynaud</a></h4>
-                <p class="text-muted">UCD Earth Institute, University College Dublin, IE</p>
+                <h4><a href="http://cellbiology.ucd.ie" target="_blank">Emmanuel Reynaud</a></h4>
+                <p class="text-muted" style="margin:0;"><a href="https://twitter.com/reynaudemmanuel" target="_blank">@ReynaudEmmanuel</a></p>
+                <p class="text-muted">Conway Institute of Biomolecular and Biomedical Science, Dublin, IE</p>
+
               </div>
             </div>
           </div>
