--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -364,7 +364,8 @@ published: true
              <tr><td>&nbsp;</td><td>12:00 - 12:15</td><td>Selected talk 4</td></tr>
              <tr><td>&nbsp;</td><td>12:15 - 12:30</td><td>Selected talk 5</td></tr>
              <tr><td>&nbsp;</td><td>12:30 - 12:45</td><td>Selected talk 6</td></tr>
-             <tr><td>&nbsp;</td><td>12:45 - 14:30</td><td>Lunch in the MPI-CBG canteen</td></tr>
+             <tr><td>&nbsp;</td><td>12:45 - 14:00</td><td>Lunch in the MPI-CBG canteen</td></tr>
+             <tr><td>&nbsp;</td><td>14:00 - 14:30</td><td>Techno-bites: Short talks from companies</td></tr>
              <tr><td>&nbsp;</td><td><b>14:30 - 17:00</b></td><td><b>Company demos and poster session I</b></td></tr>
              <tr><td>&nbsp;</td><td style="background-color:#fed136;"><b>17:00 - 18:30</b></td><td style="background-color:#fed136;"><b>Session 3: Image analysis of light sheet data</b></td></tr>
              <tr><td>&nbsp;</td><td>17:00 - 17:15</td><td>Invited talk 7 / Gene Myers</td></tr>
@@ -390,7 +391,8 @@ published: true
              <tr><td>&nbsp;</td><td>12:00 - 12:15</td><td>Selected talk 14</td></tr>
              <tr><td>&nbsp;</td><td>12:15 - 12:30</td><td>Selected talk 15</td></tr>
              <tr><td>&nbsp;</td><td>12:30 - 12:45</td><td>Selected talk 16</td></tr>
-             <tr><td>&nbsp;</td><td>12:45 - 14:30</td><td>Lunch in the MPI-CBG canteen</td></tr>
+             <tr><td>&nbsp;</td><td>12:45 - 14:00</td><td>Lunch in the MPI-CBG canteen</td></tr>
+             <tr><td>&nbsp;</td><td>14:00 - 14:30</td><td>Techno-bites: Short talks from companies</td></tr>
              <tr><td>&nbsp;</td><td><b>14:30 - 17:00</b></td><td><b>Company demos and poster session III</b></td></tr>
              <tr><td>&nbsp;</td><td><b>15:30 - 16:30</b></td><td><b>Presentations of EMBO practical course teams (4 teams 15 minutes each)</b></td></tr>
              <tr><td>&nbsp;</td><td style="background-color:#fed136;"><b>17:00 - 18:30</b></td><td style="background-color:#fed136;"><b>Session 6: Cell biology applications of light sheet microcopy</b></td></tr>
