--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -95,7 +95,7 @@ published: true
               <h4 class="about-heading">Registration Deadline</h4>
               <p class="text-muted">July 1st, 2018</p>
               <h4 class="about-heading">Abstract Submission Deadline</h4>
-              <p class="text-muted">July 1st, 2018</p>
+              <p class="text-muted">July 6th, 2018</p>
               <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://indico.mpi-cbg.de/e/LSFM" target="_blank">Apply Now!</a>
               <!--
               <h4 class="about-heading">Chosen Participants Will Be Notified By</h4>
@@ -452,7 +452,7 @@ published: true
                   <p class="text-muted text-left">July 1st, 2018</p>
                   <br/>
                   <h4 class="about-heading text-left">Abstract Submission Deadline</h4>
-                  <p class="text-muted text-left">July 1st, 2018</p>
+                  <p class="text-muted text-left">July 6th, 2018</p>
                   <!--
                   <h4 class="about-heading text-left">Chosen Participants Will Be Notified By</h4>
                   <p class="text-muted text-left">15 April 2018</p>
