--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -2,7 +2,7 @@
 layout: external
 title: Light Sheet Workshop
 permalink: /lightsheet_workshop/
-published: true
+published: false
 ---
 
 <!DOCTYPE html>
